closDevOrg copy/force-app/main/default/objects/LOS_Assignment_TAT__c/fields/LOS_Assignment_Start__c.field-meta.xml
<CustomField>
    <fullName>LOS_Assignment_Start__c</fullName>
    <description>Assignment Start. See docs/data-dictionary.md for usage.</description>
    <label>Assignment Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>