closDevOrg copy/force-app/main/default/objects/LOS_Assignment_TAT__c/fields/LOS_Business_Minutes__c.field-meta.xml
<CustomField>
    <fullName>LOS_Business_Minutes__c</fullName>
    <description>Business Minutes. See docs/data-dictionary.md for usage.</description>
    <label>Business Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>