closDevOrg copy/force-app/main/default/objects/LOS_Assignment_TAT__c/fields/LOS_Queue_Key__c.field-meta.xml
<CustomField>
    <fullName>LOS_Queue_Key__c</fullName>
    <description>Portable Queue Group.DeveloperName; future assignment service validates existence and eligible object.</description>
    <label>Queue Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>