closDevOrg copy/force-app/main/default/objects/LOS_Assignment_TAT__c/fields/LOS_Stage_TAT__c.field-meta.xml
<CustomField>
    <fullName>LOS_Stage_TAT__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Stage TAT. See docs/data-dictionary.md for usage.</description>
    <label>Stage TAT</label>
    <referenceTo>LOS_Stage_TAT__c</referenceTo>
    <relationshipLabel>LOS Assignment TAT Stage TAT</relationshipLabel>
    <relationshipName>LOS_Assignment_TAT_Stage_TAT</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>