closDevOrg copy/force-app/main/default/objects/LOS_Assignment_TAT__c/fields/LOS_User__c.field-meta.xml
<CustomField>
    <fullName>LOS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User. See docs/data-dictionary.md for usage.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>LOS Assignment TAT User</relationshipLabel>
    <relationshipName>LOS_Assignment_TAT_User</relationshipName>
    <type>Lookup</type>
</CustomField>