closDevOrg copy/force-app/main/default/objects/LOS_Assignment_TAT__c/validationRules/LOS_Date_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>LOS_Date_Order</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(LOS_Assignment_End__c)), LOS_Assignment_End__c &lt; LOS_Assignment_Start__c)</errorConditionFormula>
    <errorMessage>End must be on or after start.</errorMessage>
</ValidationRule>