closDevOrg copy/force-app/main/default/objects/LOS_Assignment_TAT__c/validationRules/LOS_Exactly_One_Assignee.validationRule-meta.xml
<ValidationRule>
    <fullName>LOS_Exactly_One_Assignee</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(ISBLANK(LOS_User__c), ISBLANK(LOS_Queue_Key__c)), AND(NOT(ISBLANK(LOS_User__c)), NOT(ISBLANK(LOS_Queue_Key__c))))</errorConditionFormula>
    <errorMessage>Specify exactly one user or queue key.</errorMessage>
</ValidationRule>